--- a/20240930_hw/readme.adoc
+++ b/20240930_hw/readme.adoc
@@ -1,1 +1,14 @@
+= 20241001
+
+首頁(P20240930)::
+會顯示尚未登入的提醒，並只能進入登入畫面
+
+登入(P20240930/login)::
+沒有登入前，只能進入index與login其底下的路徑，也就是只能瀏覽首頁，建立帳號，登入
+
+登入後(P20240930/)::
+會在首頁顯示登入者的帳號，並隱藏登入按鈕，只留登出按鈕
+
+遊戲(P20240930/lottery)::
+最高可排除42個數字，不檢查是否重複
 
